# Abschlussprojekt

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: person_db.json  users.json
data/activities/: activity.fit
src/: add_person.py  compare.py  ekgdata.py  ekgstreamlit.py  fit_map.py  login.py  person.py  read_fit_data.py  read_person_data.py
