[project]
name = "Abschlussprojekt"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Christoph Gleinser", email = "gc0453@mci4me.at"},
]
dependencies = ["streamlit>=1.58.0", "plotly>=6.8.0", "scipy>=1.17.1", "pandas>=3.0.3"]
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
